<resources>
    <string name="uploadImages">Set your image</string>
    <string name="app_name">Expense Tracker</string>
    <string name="enter_expense_amount">Enter expense amount</string>
    <string name="enter_expense_date">Enter expense date</string>
    <string name="enter_expense_time_optional">Enter expense time(optional)</string>
    <string name="add_expense">Add Expense</string>
    <string name="add_document_if_any">Add document(if any)</string>

</resources>
